    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 124 - 1/11/2006 <==

C <mave> prettified the output of output stream operators
B <mave> resolved bug in Updatable class (moved implementation into a .cpp file)
C <mave> updated todo list

    ==> 123 - 30/10/2006 <==

C <mave> <outfunction> tag now is handled by xml I/O

    ==> 122 - 30/10/2006 <==

C <mave> updated the todo list

    ==> 120 - 30/10/2006 <==

+ <mave> typedef checking to print out an error message when users tries to includes directly
        primtypes.h, observ.h, vectordata.h, matrixdata.h, realvec.h and realmat.h

    ==> 119 - 27/10/2006 <==

C <mave> updated the ToDo List
C <mave> also <outputfunction> tag is correctly parsed
+ <mave> Factory now manage (create/register) OutputFunction classes
- <mave> deprecated all input stream operator
+ <mave> now OutputFunction, Cluster and Linker are properly managed by '<<' operators
+ <mave> added method for creating subclasses of OutputFunction from a PropertySettings map
C <mave> moved implementation of subclasses of OutputFunction from .h to .cpp file
+ <mave> added method setProperties to Propertized class

    ==> 117 - 27/10/2006 <==

B <mave> resolved bug in sparsematrixlinker.h

    ==> 116 - 27/10/2006 <==

B <mave> bugfix in parsing <order> tag

    ==> 115 - 27/10/2006 <==

C <mave> added random.h to includes presents in nnfw.h

    ==> 114 - 25/10/2006 <==

C <mave> a little change in parsing <cluster> ;-)

    ==> 113 - 25/10/2006 <==

C <mave> due to problems to elaborate xmlChar* strings of libxml2, I used the QT library for parsing
        xml files; Now, the NNFW depends on QT-4
