@@ -5,43 +5,55 @@ SET( CMAKE_COLOR_MAKEFILE ON )
 ### Configure of Library
 ### a string variable that contains configuration keys separated by with spaces:
 ### - double     <= use double precision for Real number
-### - debug      <= compile with debug flags activated
 ### - gsl        <= link against GSL library
 ### - mkl        <= link against MKL library
 ### Default (empty) means that it will be compiled optimized without debug, GSL and MKL with single precision
-SET( NNFW_CONFIG "" CACHE STRING "NNFW Generation Configuration" )
+SET( NNFW_CONFIG "" CACHE STRING "NNFW Configuration" )
 
-### configure CMake to link againt Qt4
+### configure CMake to link against Qt4
 SET( QT_DONT_USE_QTGUI TRUE )
 SET( QT_USE_QTXML TRUE )
 INCLUDE( FindQt4 )
 INCLUDE( UseQt4 )
 
+FILE( GLOB NNFW_SRCS ./src/*.cpp )
+FILE( GLOB NNFW_HDRS ./src/*.cpp )
+
+INCLUDE_DIRECTORIES( ./include )
+SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
+IF ( NNFW_CONFIG MATCHES shared )
+    ADD_LIBRARY( nnfw SHARED ${NNFW_SRCS} )
+    INSTALL( TARGETS nnfw LIBRARY DESTINATION lib )
+ELSE ( NNFW_CONFIG MATCHES shared )
+    ADD_LIBRARY( nnfw STATIC ${NNFW_SRCS} )
+    INSTALL( TARGETS nnfw ARCHIVE DESTINATION lib )
+ENDIF ( NNFW_CONFIG MATCHES shared )
+
+#TARGET_LINK_LIBRARIES( nnfw ${QT_LIBRARIES} )
+INSTALL( FILES ${NNFW_HDRS} DESTINATION include/nnfw )
+
 ### Setting Compiler g++ for linux machines
 IF (UNIX)
     MESSAGE( "-- Setting compiler for Linux" )
     SET( CMAKE_CXX_COMPILER "g++" )
-    SET( CMAKE_CXX_FLAGS " -pipe -fno-strict-aliasing -Wall -W" )
-    ### --- debug check
-    IF ( NNFW_CONFIG MATCHES debug )
-        ## Debug version
-        SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -g -O0 " )
-        ADD_DEFINITIONS( "-DNNFW_DEBUG" )
-    ELSE ( NNFW_CONFIG MATCHES debug )
-        ## Optimized version
-        SET( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -O3 -funroll-loops " )
-    ENDIF ( NNFW_CONFIG MATCHES debug )
-
+    SET( CMAKE_CXX_FLAGS "-pipe -fno-strict-aliasing -Wall -W" )
+    SET( CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DNNFW_DEBUG" )
+    SET( CMAKE_CXX_FLAGS_RELEASE "-O3 -funroll-loops" )
+    SET( CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -O2" )
+    SET( CMAKE_CXX_FLAGS_MINSIZEREL "-O2 -Os" )
+    SET_TARGET_PROPERTIES( nnfw PROPERTIES COMPILE_FLAGS "" )
     ### --- double check
     IF ( NNFW_CONFIG MATCHES double )
         ADD_DEFINITIONS( "-DNNFW_DOUBLE_PRECISION" )
     ENDIF ( NNFW_CONFIG MATCHES double )
-
     ### --- gsl check
     IF ( NNFW_CONFIG MATCHES gsl )
-        ADD_DEFINITIONS( "-DNNFW_USE_GSL" )
+        EXEC_PROGRAM( gsl-config ARGS --libs OUTPUT_VARIABLE GSL_LIB )
+        EXEC_PROGRAM( gsl-config ARGS --cflags OUTPUT_VARIABLE GSL_FLAGS )
+#        TARGET_LINK_LIBRARIES( nnfw ${GSL_LIB} )
+        GET_TARGET_PROPERTY( TMP nnfw COMPILE_FLAGS )
+        SET_TARGET_PROPERTIES( nnfw PROPERTIES COMPILE_FLAGS "${TMP} ${GSL_FLAGS} -DNNFW_USE_GSL" )
     ENDIF ( NNFW_CONFIG MATCHES gsl )
-
     ### --- mkl check
     IF ( NNFW_CONFIG MATCHES mkl )
         IF ( NOT MKL_CACHED )
@@ -50,21 +62,7 @@ IF (UNIX)
             SET( MKL_PATH ${MKL_INC} CACHE INTERNAL "MKL_PATH" )
             SET( MKL_CACHED TRUE CACHE INTERNAL "MKL_CACHED" )
         ENDIF ( NOT MKL_CACHED )
-        ADD_DEFINITIONS( "-DNNFW_USE_MKL" )
+        GET_TARGET_PROPERTY( TMP nnfw COMPILE_FLAGS )
+        SET_TARGET_PROPERTIES( nnfw PROPERTIES COMPILE_FLAGS "${TMP} -I${MKL_PATH} -DNNFW_USE_MKL" )
     ENDIF ( NNFW_CONFIG MATCHES mkl )
-
-    ### --- replace spurious ';' with blank space
-    STRING( REPLACE ";" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} )
 ENDIF (UNIX)
-
-SET( NNFW_SRCS ./src/propertized.cpp ./src/updatable.cpp ./src/cluster.cpp ./src/linker.cpp ./src/simplecluster.cpp ./src/biasedcluster.cpp ./src/fakecluster.cpp ./src/ddecluster.cpp ./src/outputfunction.cpp ./src/liboutputfunctions.cpp ./src/matrixlinker.cpp ./src/sparsematrixlinker.cpp ./src/copylinker.cpp ./src/neuralnet.cpp ./src/utils.cpp ./src/nnfwfactory.cpp ./src/messages.cpp ./src/random.cpp ./src/types.cpp ./src/realvec.cpp ./src/realmat.cpp ./src/blockslearning.cpp ./src/learningnetwork.cpp ./src/ionnfw.cpp ./src/xmlnnfw.cpp ./src/libmatrixmodifiers.cpp )
-
-SET( NNFW_HDRS ./include/nnfw.h ./include/primtypes.h ./include/types.h ./include/memutils.h ./include/observ.h ./include/clonable.h ./include/propertized.h ./include/vectordata.h ./include/matrixdata.h ./include/realvec.h ./include/realmat.h ./include/updatable.h ./include/cluster.h ./include/simplecluster.h ./include/biasedcluster.h ./include/fakecluster.h ./include/ddecluster.h ./include/outputfunction.h ./include/derivableoutputfunction.h ./include/liboutputfunctions.h ./include/linker.h ./include/copylinker.h ./include/matrixlinker.h ./include/sparsematrixlinker.h ./include/neuralnet.h ./include/utils.h ./include/nnfwfactory.h ./include/messages.h ./include/random.h ./include/blockslearning.h ./include/learningnetwork.h ./include/ionnfw.h ./include/libmatrixmodifiers.h ./include/learningalgorithm.h ./include/modifier.h )
-
-INCLUDE_DIRECTORIES( ./include ${MKL_PATH} )
-ADD_LIBRARY( nnfw STATIC ${NNFW_SRCS} )
-TARGET_LINK_LIBRARIES( nnfw ${QT_LIBRARIES} )
-SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
-
-INSTALL( TARGETS nnfw ARCHIVE DESTINATION lib )
-INSTALL( FILES ${NNFW_HDRS} DESTINATION include/nnfw )
