@@ -20,6 +20,8 @@
 #ifndef CLONABLE_H
 #define CLONABLE_H
 
+#include "types.h"
+
 //! Namespace that contains all classes of Neural Network Framework
 namespace nnfw {
 
