@@ -34,7 +34,6 @@
 
 #include <list>
 #include <algorithm>
-#include "messages.h"
 
 //! Namespace that contains all classes of Neural Network Framework
 namespace nnfw {
