@@ -32,10 +32,6 @@
  *  Details...
  */
 
-#ifdef NNFW_DEBUG
-#include "messages.h"
-#endif
-
 
 //! Namespace that contains all classes of Neural Network Framework
 namespace nnfw {
