@@ -20,6 +20,7 @@
 #ifndef SIMPLECLUSTER_H
 #define SIMPLECLUSTER_H
 
+#include "types.h"
 #include "cluster.h"
 #include "outputfunction.h"
 
