@@ -25,6 +25,8 @@
  * Details...
  */
 
+#include "types.h"
+
 //! Namespace that contains all classes of Neural Network Framework
 namespace nnfw {
 
