@@ -21,7 +21,6 @@
 #include "outputfunction.h"
 #include "cluster.h"
 #include "linker.h"
-#include "messages.h"
 
 //! Namespace that contains all classes of Neural Network Framework
 namespace nnfw {
