@@ -19,7 +19,6 @@
 
 #include "simplecluster.h"
 #include "liboutputfunctions.h"
-#include "messages.h"
 #include "random.h"
 #include <cstdio>
 #include <cstring>
